iconsdir = $(datadir)/icons/hicolor/48x48/apps
icons_DATA = 								\
	xfce4-session.png						\
	xfce4-splash.png						\
	system-hibernate.png						\
	system-log-out.png							\
	system-reboot.png							\
	system-shutdown.png						\
	system-suspend.png						\
	xfsm-hibernate.png						\
	xfsm-logout.png							\
	xfsm-reboot.png							\
	xfsm-shutdown.png						\
	xfsm-suspend.png

EXTRA_DIST = $(icons_DATA)
